--- a/app/src/main/res/layout/fragment_bank_detail.xml
+++ b/app/src/main/res/layout/fragment_bank_detail.xml
@@ -23,7 +23,7 @@
         <RelativeLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/root_layout"
-        >
+                        android:visibility="invisible">
 
             <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                                android:layout_height="match_parent"
